Fixed task checkbox wrapping bug for mobile devives by using a media query to shrink the max-width and min-width for the task fields, so they shrink as a percentage for mobile devices

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -56,8 +56,15 @@ div.task-card-tmp {
     display:                  inline-block;
     height:                   100%;
     max-width:                90%;
-    min-width:                70%;
+    min-width:                90%;
     margin:                   0;
+    
+/**************/    
+    @media only screen and (max-width: 480px) {
+      max-width:              80%;
+      min-width:              40%;
+    }
+/****************/
         
     .title {
       h4 {
